update composer extra

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "AutomationServiceProvider"
+                "Amghrby\\Automation\\AutomationServiceProvider"
             ]
         }
     }
