--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     },
     "authors": [
         {
-            "name": "Abdelrahman Elmaghraby"
+            "name": "Abdelrahman Elmaghraby",
+            "email": "abdelrahman.elmaghraby@theaddressHolding.com"
         }
     ],
     "minimum-stability": "dev",
@@ -21,7 +22,6 @@
         "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "^10.0|^11.0",
         "orchestra/testbench": "^8.0|^9.0|^10.0|^11.0",
-        "laravel-zero/laravel-zero": "dev-master"
     },
     "extra": {
         "laravel": {
